# backend/handlers/post.handler.go
@@ -12,18 +12,18 @@ import (
 	"github.com/go-chi/chi"
 )
 
-// @Summary Create a new post
-// @Description Creates a new post associated with the authenticated user.
-// @Tags Posts
-// @Accept json
-// @Produce json
-// @Param Authorization header string true "Bearer token"
-// @Param post body models.Post true "Post data"
-// @Success 201 {string} string "Post inserted with ID"
-// @Failure 400 {object} map[string]string "Bad request - Missing fields or invalid JSON"
-// @Failure 401 {object} map[string]string "Unauthorized - Token not provided or invalid"
-// @Failure 500 {object} map[string]string "Internal server error - Unable to insert post"
-// @Router /api/post [post]
+//	@Summary		Create a new post
+//	@Description	Creates a new post associated with the authenticated user.
+//	@Tags			Posts
+//	@Accept			json
+//	@Produce		json
+//	@Param			Authorization	header		string				true	"Bearer token"
+//	@Param			post			body		models.Post			true	"Post data"
+//	@Success		201				{string}	string				"Post inserted with ID"
+//	@Failure		400				{object}	map[string]string	"Bad request - Missing fields or invalid JSON"
+//	@Failure		401				{object}	map[string]string	"Unauthorized - Token not provided or invalid"
+//	@Failure		500				{object}	map[string]string	"Internal server error - Unable to insert post"
+//	@Router			/api/post [post]
 func InsertPostHandler(w http.ResponseWriter, r *http.Request) {
 	var post models.Post
 
@@ -71,16 +71,16 @@ func InsertPostHandler(w http.ResponseWriter, r *http.Request) {
 }
 
 
-// @Summary Get a post by ID
-// @Description Retrieves a specific post by its unique ID.
-// @Tags Posts
-// @Accept json
-// @Produce json
-// @Param id path string true "Post ID"
-// @Success 200 {object} models.Post "Post retrieved successfully"
-// @Failure 400 {object} map[string]string "Missing ID in request"
-// @Failure 500 {object} map[string]string "Error getting post"
-// @Router /api/post/{id} [get]
+//	@Summary		Get a post by ID
+//	@Description	Retrieves a specific post by its unique ID.
+//	@Tags			Posts
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		string				true	"Post ID"
+//	@Success		200	{object}	models.Post			"Post retrieved successfully"
+//	@Failure		400	{object}	map[string]string	"Missing ID in request"
+//	@Failure		500	{object}	map[string]string	"Error getting post"
+//	@Router			/api/post/{id} [get]
 func GetPostByIdHandler(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
@@ -97,17 +97,17 @@ func GetPostByIdHandler(w http.ResponseWriter, r *http.Request) {
 	utils.SendSuccessResponse(w, http.StatusOK, fmt.Sprintf("Post: %v", post))
 }
 
-// @Summary Delete a post by ID
-// @Description Deletes a post based on the provided post ID.
-// @Tags Posts
-// @Accept json
-// @Produce json
-// @Param id path string true "Post ID"
-// @Success 200 {string} string "Post deleted successfully"
-// @Failure 400 {object} map[string]string "Bad request - Missing ID"
-// @Failure 404 {object} map[string]string "Not found - Post not found"
-// @Failure 500 {object} map[string]string "Internal server error - Unable to delete post"
-// @Router /api/post/{id} [delete]
+//	@Summary		Delete a post by ID
+//	@Description	Deletes a post based on the provided post ID.
+//	@Tags			Posts
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		string				true	"Post ID"
+//	@Success		200	{string}	string				"Post deleted successfully"
+//	@Failure		400	{object}	map[string]string	"Bad request - Missing ID"
+//	@Failure		404	{object}	map[string]string	"Not found - Post not found"
+//	@Failure		500	{object}	map[string]string	"Internal server error - Unable to delete post"
+//	@Router			/api/post/{id} [delete]
 func DeletePostByIdHandler(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
